<resources>
    <string name="app_name">Android showcase</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_headphone_receiver">HeadphoneReceiver</string>

    <!-- Palette Activity -->
    <string name="title_activity_palette">PaletteActivity</string>
    <string name="palette_gallery_button">Gallery</string>

    <!-- Sensors Activity -->
    <string name="title_activity_sensors">SensorsActivity</string>
    <string name="light_sensor_section">Light sensor</string>
    <string name="gravity_sensor_section">Gravity sensor</string>
    <string name="pressure_sensor_section">Pressure sensor</string>
    <string name="proximity_sensor_section">Proximity sensor</string>
    <string name="ambient_tempertature_section">Ambient temperature sensor</string>

    <!-- Barcode Scanner Activity -->
    <string name="title_activity_barcode_scanner">BarcodeScannerActivity</string>

    <!-- RecyclerView Activity -->
    <string name="title_activity_recycler">RecyclerActivity</string>

    <!-- Design Support Library Activity -->
    <string name="title_activity_design_library">DesignLibraryActivity</string>

    <!-- Intent Filter Activity -->
    <string name="title_activity_intent_filter">IntentFilterActivity</string>

    <!-- Media Player Activity -->
    <string name="title_activity_media_player">MediaPlayerActivity</string>
    <string name="play_activity_media_player">Play</string>
    <string name="pause_activity_media_player">Pause</string>

    <!-- Search Bar Activity -->
    <string name="title_activity_search_bar">SearchBar</string>
    <string name="action_search">Search</string>
</resources>
