<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.spun.androidshowcase.SensorsActivity">

        <!-- LIGHT SENSOR -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_sensor_section"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/light_sensor_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <!-- GRAVITY SENSOR -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gravity_sensor_section"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gravity_sensor_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <!-- PRESSURE SENSOR -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure_sensor_section"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pressure_sensor_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <!-- PROXIMITY SENSOR -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proximity_sensor_section"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/proximity_sensor_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <!-- AMBIENT TEMPERATURE SENSOR -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ambient_tempertature_section"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ambient_temperature_sensor_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

    </LinearLayout>

</ScrollView>